# Cplusplus_Jenkins

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  jenkinsfile  main.cpp
app/: main.cpp  main.hpp  utils.cpp
tests/: test_main.cpp
